# anonymizer

./: .gitignore  README.md  pyproject.toml
src/openai_anonymizer/: InstanceCounterAnonymizer.py  InstanceCounterDeanonymizer.py  anonymizer.py  config.py  listEntities.py  main.py  schemas.py
src/openai_anonymizer/custom_recognizers/: randomSecretRecognizer.py
tests/: test_anonymizer.py
